--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+    box-sizing: border-box;
+}
+body{
+    font-family: sans-serif;
+}
+:root{
+    --para:  #6D7280;
+    --white: #fff;
+}
+
+.head {
+    width: 70%;
+    font-family: sans-serif;
+    font-size: 45px;
+    font-weight: 600;
+    /* line-height: 60px; */
+    letter-spacing: 0px;
+    text-align: center;
+    color: #171717;
+    margin: auto;
+}
+a{
+    text-decoration: none;
+}
+p{
+    color:var(--para)
+}
+.heading{
+    color: #171717;
+}
+body{
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+}
