--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,7 +1,7 @@
 
-<nav  class="navbar  navbar-expand-lg bg-light fixed-top "  >
+<nav  class="navbar  navbar-expand-lg bg-light"  >
     <div class="logo">
-        <img src="../../../assets/image/logo.png" alt="">
+        
     </div>
 
     <div class="ms-auto">
